<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flag_quizz_app"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textColor="@color/white"
   />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/welcomeGrey"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plese_enter_your_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textColor="@color/lightGrey"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="20dp"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:inputType="textCapWords"
                    android:textColor="@color/welcomeGrey"
                    android:textColorHint="@color/lightGrey"
                    >
                </androidx.appcompat.widget.AppCompatEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                >
            </Button>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>